--- a/index-rtl.html
+++ b/index-rtl.html
@@ -121,7 +121,6 @@
                 <li><a href="">الحلول السحابية</a></li>
                 <li><a href="">التخزين السحابي</a></li>
                 <li><a href="">الأمن السحابي</a></li>
-                <li><a href="">مكتبي </a></li>
                 <li><a href="" class="active">مكتبي</a></li>
             </ul>
         </div>
@@ -269,7 +268,7 @@
                                 allowfullscreen></iframe>
                         </div>
                         <br />
-                        <button type="button" class="btn btn-secondary">اطلب الان مجانا</button>
+                        <button type="button" class="btn btn-secondary">جربة الان مجانا</button>
                     </div>
                 </div>
 
