--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     <li><a href="">Cloud Solutions</a></li>
                     <li><a href="">Cloud storage</a></li>
                     <li><a href="">Cloud Security</a></li>
-                    <li><a href="">Maktabi</a></li>
-                    <li><a href="" class='active'>Office</a></li>
+                    <li><a href="" class='active'>Maktabi
+                    </a></li>
             </ul>
         </div>
     </div>
