--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <div class="container">
             <div class="page-details-inner">
                 <div class="page-title">
-                    <h1 class="">Office</h1>
+                    <h1 class="">Maktabi</h1>
 
                 </div>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Office</li>
+                        <li class="breadcrumb-item active" aria-current="page">Maktabi</li>
                     </ol>
                 </nav>
             </div>
