--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="col-lg-3">
                     <h3>  OTHER  </h3>
                     <ul>
-                        <li> <a href=""> Resell </a> </li>
+                        <li> <a href=""> Reseller </a> </li>
                         <li> <a href=""> Terms and Conditions </a> </li>
                         <li> <a href=""> Terms of sales, support, and training </a> </li>
                         <li> <a href=""> Privacy Policy </a> </li>
